--- a/shufl-web/src/app/components/shared/group/dialogs/group-suggestion-rate/group-suggestion-rate.component.scss
+++ b/shufl-web/src/app/components/shared/group/dialogs/group-suggestion-rate/group-suggestion-rate.component.scss
@@ -14,7 +14,7 @@
         &.active,
         &.populated {
             .input-container {
-                &::after {
+                &:not(.comment)::after {
                     width: fit-content;
                     height: 25px;
 
@@ -26,6 +26,19 @@
 
                     content: "/10";
                 }
+            }
+        }
+
+        .comment {
+            height: 200px;
+
+            textarea {
+                min-height: 160px;
+                max-height: 160px;
+
+                font-family: Arial, Helvetica, sans-serif;
+
+                resize: none;
             }
         }
     }
