--- a/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating/group-suggestion-user-rating.component.html
+++ b/shufl-web/src/app/components/group/group-suggestion-details/group-suggestion-user-rating-list/group-suggestion-user-rating/group-suggestion-user-rating.component.html
@@ -1,5 +1,45 @@
 <div class="group-suggestion-user-rating-container {{ position }}">
     <app-group-suggestion-rating [rating]="rating" [embedded]="true" *ngIf="rating != null"></app-group-suggestion-rating>
     <p class="rating-comment">{{ rating.comment }}</p>
-    <a class="user-link" [routerLink]="['/user', rating.username]">{{ rating.displayName }}</a>
+    <p class="created-on">{{ rating.createdOn | date: 'dd/MM/yyyy'}}</p>
+    <div class="links-container">
+        <a class="user-link" [routerLink]="['/user', rating.username]">{{ rating.displayName }}</a>
+        <div class="action-buttons-container" *ngIf="userOwnsRating">
+            <div class="edit-icon icon" (click)="editButtonClicked()">
+                <svg height="512pt" viewBox="0 0 512 511" width="512pt" xmlns="http://www.w3.org/2000/svg">
+                    <path fill="#adadad" stroke="#adadad" d="m405.332031 256.484375c-11.796875 0-21.332031 9.558594-21.332031 21.332031v170.667969c0 11.753906-9.558594 21.332031-21.332031 21.332031h-298.667969c-11.777344 0-21.332031-9.578125-21.332031-21.332031v-298.667969c0-11.753906 9.554687-21.332031 21.332031-21.332031h170.667969c11.796875 0 21.332031-9.558594 21.332031-21.332031 0-11.777344-9.535156-21.335938-21.332031-21.335938h-170.667969c-35.285156 0-64 28.714844-64 64v298.667969c0 35.285156 28.714844 64 64 64h298.667969c35.285156 0 64-28.714844 64-64v-170.667969c0-11.796875-9.539063-21.332031-21.335938-21.332031zm0 0" />
+                    <path fill="#adadad" stroke="#adadad" d="m200.019531 237.050781c-1.492187 1.492188-2.496093 3.390625-2.921875 5.4375l-15.082031 75.4375c-.703125 3.496094.40625 7.101563 2.921875 9.640625 2.027344 2.027344 4.757812 3.113282 7.554688 3.113282.679687 0 1.386718-.0625 2.089843-.210938l75.414063-15.082031c2.089844-.429688 3.988281-1.429688 5.460937-2.925781l168.789063-168.789063-75.414063-75.410156zm0 0" />
+                    <path fill="#adadad" stroke="#adadad" d="m496.382812 16.101562c-20.796874-20.800781-54.632812-20.800781-75.414062 0l-29.523438 29.523438 75.414063 75.414062 29.523437-29.527343c10.070313-10.046875 15.617188-23.445313 15.617188-37.695313s-5.546875-27.648437-15.617188-37.714844zm0 0" />
+                </svg>
+            </div>
+            <div class="delete-icon icon" (click)="deleteButtonClicked()">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 480 480" style="enable-background:new 0 0 480 480;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path stroke="#a52e1d" fill="#a52e1d" d="M408,64h-80V40c-0.026-22.08-17.92-39.974-40-40h-96c-22.08,0.026-39.974,17.92-40,40v24H72c-4.418,0-8,3.582-8,8
+                                s3.582,8,8,8h24v360c0.026,22.08,17.92,39.974,40,40h208c22.08-0.026,39.974-17.92,40-40V80h24c4.418,0,8-3.582,8-8
+                                S412.418,64,408,64z M168,40c0-13.255,10.745-24,24-24h96c13.255,0,24,10.745,24,24v24H168V40z M368,440c0,13.255-10.745,24-24,24
+                                H136c-13.255,0-24-10.745-24-24V80h256V440z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path stroke="#a52e1d" fill="#a52e1d" d="M176,120c-4.418,0-8,3.582-8,8v288c0,4.418,3.582,8,8,8s8-3.582,8-8V128C184,123.582,180.418,120,176,120z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path stroke="#a52e1d" fill="#a52e1d" d="M304,120c-4.418,0-8,3.582-8,8v288c0,4.418,3.582,8,8,8s8-3.582,8-8V128C312,123.582,308.418,120,304,120z"/>
+                        </g>
+                    </g>
+                    <g>
+                        <g>
+                            <path stroke="#a52e1d" fill="#a52e1d" d="M240,120c-4.418,0-8,3.582-8,8v288c0,4.418,3.582,8,8,8s8-3.582,8-8V128C248,123.582,244.418,120,240,120z"/>
+                        </g>
+                    </g>
+                </svg>
+            </div>
+        </div>
+    </div>
 </div>
