--- a/shufl-web/src/app/components/search/search.component.html
+++ b/shufl-web/src/app/components/search/search.component.html
@@ -1,5 +1,6 @@
 <div class="card-container">
     <div class="card">
+        <app-card-nav-bar></app-card-nav-bar>
         <div class="search-bar-container">
             <form [formGroup]="searchForm">
                 <div class="form-group" 
@@ -17,6 +18,7 @@
             </form>
         </div>
         <div class="search-results-container">
+            <app-artist-search-results-container></app-artist-search-results-container>
             <app-album-search-results-container></app-album-search-results-container>
         </div>
     </div>
