--- a/shufl-web/src/app/components/search/search.component.scss
+++ b/shufl-web/src/app/components/search/search.component.scss
@@ -1,5 +1,7 @@
 .card-container {
     .card {
+        min-height: 150px;
+
         .search-bar-container {
             form {
                 .form-group {
