--- a/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
+++ b/shufl-web/src/app/components/shared/album-icon/album-icon.component.scss
@@ -28,6 +28,12 @@
 
         overflow: hidden;
 
+        &.disabled {
+            .album-link {
+                pointer-events: none;
+            }
+        }
+
         .album-link {
             max-width: 100%;
 
