--- a/shufl-web/src/app/components/search/artist-search-results-container/artist-search-result/artist-search-result.component.scss
+++ b/shufl-web/src/app/components/search/artist-search-results-container/artist-search-result/artist-search-result.component.scss
@@ -20,8 +20,8 @@
         overflow: hidden;
 
         img {
-            width: 100px;
-            height: 100px;
+            width: 100%;
+            height: 100%;
         }
     }
 
@@ -35,5 +35,23 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+    }
+}
+
+@media (min-width: 1920px) and (max-width: 2560px) {
+    .artist-search-result-container {
+        .artist-image-container {
+            width: 225px;
+            height: 225px;
+        }
+    }
+}
+
+@media (min-width: 2560px) {
+    .artist-search-result-container {
+        .artist-image-container {
+            width: 300px;
+            height: 300px;
+        }
     }
 }
