--- a/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.scss
+++ b/shufl-web/src/app/components/shared/navigation/nav-bar/nav-bar.component.scss
@@ -7,6 +7,8 @@
 
     background-color: $tertiary-background-colour;
 
+    position: relative;
+
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -14,6 +16,19 @@
 
     .app-icon {
         display: none;
+    }
+
+    .version {
+        width: 100%;
+
+        color: $tertiary-foreground-colour;
+
+        position: absolute;
+        bottom: 15px;
+
+        display: none;
+
+        text-align: center;
     }
 }
 
@@ -28,6 +43,10 @@
             margin: 25px auto;
             padding-top: 60%;
 
+            display: block;
+        }
+
+        .version {
             display: block;
         }
     }
